Bug 1895872 - Avoid generating a broken PDF when a link destination is not present in the generated output. r=gfx-reviewers,jrmuizel

Fix confirmed by ajohnson (see comment 8) to work around the reported issue.

Differential Revision: https://phabricator.services.mozilla.com/D210024